Minor fixes and updated README.md Add global api operations handler with exception handeling

--- a/src/main/resources/money-transfer-api.yaml
+++ b/src/main/resources/money-transfer-api.yaml
@@ -187,7 +187,7 @@ paths:
         '404':
           $ref: '#/components/responses/TransferNotFoundResponse'
 servers:
-  - url: 'http://localhost:8080/v1'
+  - url: 'http://localhost:8080'
 components:
   parameters:
     id:
